--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-  <div class="card">
+  <!-- <div class="card">
     <img src="./images/image-qr-code.png" alt="">
     <h3 class="title">Improve your Front-end skills by building projects</h3>
     <p>Scan the QR to visit front-end mentor and take your coding skills to the next level</p>
 
-  </div>
- 
+  </div> -->
+ <div class="container"> 
+  <p class="para"> This class is rem</p> 
+ </div>
 </body>
 </html>
